Publish Archive-It's next implementation
- better syntax for "checksums"
- authorization fixes for webdatafiles
- add petabox file locations
- echo the query in the response
- fetch from multiple collections
- query on crawl-time
- various tidying and small fixes
