# ait-implementation/wasapi/serializers.py
@@ -1,3 +1,4 @@
+from datetime import datetime
 from django.conf import settings
 from django.core.exceptions import PermissionDenied
 from rest_framework import serializers
@@ -12,7 +13,8 @@ class WebdataFileSerializer(serializers.HyperlinkedModelSerializer):
       'checksums': serializers.SerializerMethodField('checksums_method'),
       'account': serializers.SerializerMethodField('account_method'),
       'collection': serializers.PrimaryKeyRelatedField(),
-      'crawl': serializers.IntegerField(),
+      'crawl': serializers.SerializerMethodField('crawl_method'),
+      'crawl-time': serializers.DateTimeField(source='crawl_time'),
       'crawl-start': serializers.SerializerMethodField('crawl_start_method'),
       'locations': serializers.SerializerMethodField('locations_method')})
     def filetype_method(self, obj):
@@ -23,11 +25,16 @@ class WebdataFileSerializer(serializers.HyperlinkedModelSerializer):
           'md5': obj.md5 }
     def account_method(self, obj):
         return obj.account_id
+    def crawl_method(self, obj):
+        return obj.crawl_job_id
     def crawl_start_method(self, obj):
         crawl_job = obj.crawl_job
         return crawl_job and crawl_job.original_start_date
     def locations_method(self, obj):
-        return [settings.WEBDATA_LOCATION_TEMPLATE % obj.__dict__]
+        return (
+          [settings.WEBDATA_LOCATION_TEMPLATE % obj.__dict__] +
+          ([settings.PBOX_LOCATION_TEMPLATE % obj.__dict__]
+            if obj.pbox_item else []));
     class Meta:
         model = WarcFile
         fields = (
@@ -38,6 +45,7 @@ class WebdataFileSerializer(serializers.HyperlinkedModelSerializer):
           'size',
           'collection',
           'crawl',
+          'crawl-time',
           'crawl-start',
           'locations')
 
@@ -53,8 +61,8 @@ class JobSerializer(serializers.HyperlinkedModelSerializer):
       'state': serializers.CharField(read_only=True),
       'account': serializers.PrimaryKeyRelatedField(read_only=True),
       'jobtoken': serializers.SerializerMethodField('jobtoken_method'),
-      'submit-time': serializers.DateTimeField(source='submit_time'),
-      'termination-time': serializers.DateTimeField(source='termination_time')})
+      'submit-time': serializers.DateTimeField(source='submit_time', read_only=True),
+      'termination-time': serializers.DateTimeField(source='termination_time', read_only=True)})
 
     def jobtoken_method(self, obj):
         return str(obj.id)
@@ -78,6 +86,7 @@ class JobSerializer(serializers.HyperlinkedModelSerializer):
         # an easy way to do that.
         value = self.set_state(value)
         value = self.set_account(value)
+        value = self.set_submit_time(value)
         return value
 
     def set_state(self, value):
@@ -89,6 +98,10 @@ class JobSerializer(serializers.HyperlinkedModelSerializer):
         if not account:  # eg "system" user
             raise PermissionDenied
         value['account'] = account
+        return value
+
+    def set_submit_time(self, value):
+        value['submit_time'] = datetime.now()
         return value
 
 class PaginationSerializerOfJobs(PaginationSerializer):
